--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,14 @@ install: ./mvnw install
 services:
   - docker
 
-  dist: trusty
+dist: trusty
 
 jobs:
   include:
     - stage: build docker image
       script:
-      - docker login -u "$whistteam" --password-stdin MayTheForceBeWithYou1!
-      - docker tag travis-ci-build-stages-demo $whistteam/travis-ci-build-stages-demo
-      - docker push $whistteam/travis-ci-build-stages-demo
-    - stage: test
-      script: docker run --rm $whistteam/travis-ci-build-stages-demo cat hello.txt
-    - script: docker run --rm $whistteam/travis-ci-build-stages-demo cat hello.txt
+      - docker login -u whistteam -p MayTheForceBeWithYou1!
+      - docker push whistteam/docker-maven-test
 
 script: "echo 'Building Docker image with tags'"
 
