--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
 language: java
 
-# setting environment variables
-env:
-  global:
-    - PROJECT_NAME_PRD = whist-game-production
-    - DOCKER_IMAGE_NAME = docker-maven-test
-    - KUBE_DEPLOYMENT_NAME = whist-game-cluster-production	
-    - KUBE_DEPLOYMENT_CONTAINER_NAME = docker-maven-test
-
 install: ./mvnw install 
 
 services:
@@ -28,7 +20,7 @@ deploy:
   - provider: script
     script: 
       - gcloud auth activate-service-account --key-file ${HOME}/whist-game-production-c2e47c08e54c.json
-      - kubectl set image deployment/${KUBE_DEPLOYMENT_NAME} ${KUBE_DEPLOYMENT_CONTAINER_NAME}=gcr.io/${PROJECT_NAME_PRD}/${DOCKER_IMAGE_NAME}:$TRAVIS_COMMIT
+      - kubectl create deployment docker-maven-test-deployment --image=gcr.io/${whist-game-production}/docker-maven-test-deployment:v1
     
       skip_cleanup: true
     on:
