--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ before install: openssl aes-256-cbc -K $encrypted_8bbfaf2ee9e4_key -iv $encrypte
 
 install: ./mvnw install 
 
+after install:
+  - ls -l /home/travis
+  - ls -l
+
 services:
   - docker
 
@@ -21,5 +25,6 @@ script: "echo 'Building Docker image with tags'"
 deploy: 
   - provider: script
     script: 
-      - gcloud auth activate-service-account --key-file ${HOME}/whist-game-production-c2e47c08e54c.json
+      - gcloud auth activate-service-account --key-file ${HOME}/whist-game-production-c2e47c08e54c.json ls -l 
       - kubectl set image deployment/${KUBE_DEPLOYMENT_NAME} ${KUBE_DEPLOYMENT_CONTAINER_NAME}=hub.docker.com/r/whistteam/${whist-game-production}/${docker-maven-test}:$TRAVIS_COMMIT
+      
