--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,10 @@ jobs:
 script: "echo 'Building Docker image with tags'"
 
 deploy: 
-  - provider: script
+  skip_cleanup: true
+  provider: script
     script: 
       - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json
       - kubectl set image deployment/${KUBE_DEPLOYMENT_NAME} ${KUBE_DEPLOYMENT_CONTAINER_NAME}=hub.docker.com/r/whistteam/${whist-game-production}/${docker-maven-test}:$TRAVIS_COMMIT
-  skip_cleanup: true
-     
+  
       
