--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ language: java
 
 before install: openssl aes-256-cbc -K $encrypted_8bbfaf2ee9e4_key -iv $encrypted_8bbfaf2ee9e4_iv -in /home/travis/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json.enc -out /home/travis/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json -d
 
-install: ./mvnw install 
+install: 
+  - ./mvnw install
+  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+  - chmod +x ./kubectl
+  - sudo mv ./kubectl /usr/local/bin/kubectl 
+  - mkdir ${HOME}/.kube
+  - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
 
 
 services:
