--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ deploy:
   skip_cleanup: true
   provider: script
   script:
+    - gcloud config set account Whist Game
     - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c
-    - gcloud config set account whistgame1
     - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json && kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
     
      
