--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,15 @@ install:
   - sudo mv ./kubectl /usr/local/bin/kubectl 
   - mkdir ${HOME}/.kube
   - echo "$KUBE_CONFIG" | base64 --decode > ${HOME}/.kube/config
-
+  cache:
+    directories:
+      - "$HOME/google-cloud-sdk/"
+  script:
+    - gcloud version || true
+    - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk; export CLOUDSDK_CORE_DISABLE_PROMPTS=1; curl https://sdk.cloud.google.com | bash; fi
+    # Add gcloud to $PATH
+    - source /home/travis/google-cloud-sdk/path.bash.inc
+    - gcloud version
 
 services:
   - docker
@@ -29,5 +37,4 @@ deploy:
   provider: script
   script: ./whist_production.sh
     
-     
       
