--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,10 @@ jobs:
 deploy: 
   skip_cleanup: true
   provider: script
-  script: ./whist_production.sh
+  script:
+    - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json
+    - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c
+    - kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
+
     
       
