--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,11 @@ jobs:
       - docker login -u whistteam -p MayTheForceBeWithYou1!
       - docker push whistteam/docker-maven-test
 
-
+before deploy:
+  script:
+    - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json
+    - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c
+    
 deploy: 
   skip_cleanup: true
   provider: script
