--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ before deploy:
 deploy: 
   skip_cleanup: true
   provider: script
-  script:
-    - kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
+  script: ./Whist_Production_Deploy.sh
+    
