--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,5 @@ jobs:
 deploy: 
   skip_cleanup: true
   provider: script
-  script:
-  - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json
-  - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-  - ./Whist_Production_Deploy.sh
+  script: ./Whist_Production_Deploy.sh
     
