--- a/.travis.yml
+++ b/.travis.yml
@@ -31,19 +31,14 @@ jobs:
       - docker login -u whistteam -p MayTheForceBeWithYou1!
       - docker push whistteam/docker-maven-test
 
-script:
-- if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then
-    rm -rf "$HOME/google-cloud-sdk"
-    curl https://sdk.cloud.google.com | bash > /dev/null
-  fi
-- source $HOME/google-cloud-sdk/path.bash.in
+before deploy:
 - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-c2e47c08e54c.json
-- gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-    
-- gcloud components update kubectl
 
 deploy: 
   skip_cleanup: true
   provider: script
-  script: kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
+  script:
+  - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
+  - gcloud components update kubectl
+  - kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
     
