--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,8 @@ jobs:
       - docker push whistteam/docker-maven-test
 
 before deploy:
+- gcloud config set project whist-game-production
+- gcloud components update
 - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-847885794860.json
 
 deploy: 
@@ -39,6 +41,5 @@ deploy:
   provider: script
   script:
   - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-  - gcloud components update kubectl
   - kubectl set image deployment/whist-backend whist-backend=hub.docker.com/r/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
     
