--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
     - stage: build docker image
       script:
       - docker login -u whistteam -p MayTheForceBeWithYou1!
+      - docker tag docker-maven-test gcr.io/whist-game-production/docker-maven-test
       - docker push gcr.io/whist-game-production/docker-maven-test
 
 before deploy:
