--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
   include:
     - stage: build docker image
       script:
-      - docker login -u whistteam -p MayTheForceBeWithYou1!
+      - docker login -u whistteam -p MayTheForceBeWithYou1! gcr.io
       - docker push gcr.io/whist-game-production/docker-maven-test
 
 before deploy:
