--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		                 </execution>
 		             </executions>
 		             <configuration>
-		             <repository>docker.io/whistteam/docker-maven-test</repository>
+		             <repository>gcr.io/whist-game-production/docker-maven-test</repository>
 		                 <tag>${project.version}</tag>
 		             </configuration>
 			</plugin>
