--- a/.travis.yml
+++ b/.travis.yml
@@ -23,17 +23,12 @@ services:
   - docker
 
 dist: trusty
-
-jobs:
-  include:
-    - stage: build docker image
-      script:
-      - docker login -u whistteam -p MayTheForceBeWithYou1!
-      - docker push gcr.io/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
-
+ 
+      
 before deploy:
 - gcloud config set project whist-game-production
 - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-847885794860.json
+- gcloud docker push gcr.io/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
 
 deploy: 
   skip_cleanup: true
