--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,12 @@ dist: trusty
 before deploy:
 - gcloud config set project whist-game-production
 - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-847885794860.json
-- gcloud docker -- push gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT:$TRAVIS_COMMIT
+- gcloud docker -- push gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT
 
 deploy: 
   skip_cleanup: true
   provider: script
   script:
   - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-  - kubectl set image deployment/whist-backend whist-backend=https://index.docker.io/v1/whistteam/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
+  - kubectl set image deployment/whist-backend whist-backend=gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT:$TRAVIS_COMMIT
     
