--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ deploy:
   provider: script
   script:
   - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-  - kubectl set image deployment/whist-backend whist-backend=gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT
+  - kubectl set image deployment/whist-server whist-server=gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT
     
