--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>whist-demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -66,7 +66,7 @@
 		                 </execution>
 		             </executions>
 		             <configuration>
-		             <repository>gcr.io/whist-game-production/docker-maven-test</repository>
+		             <repository>docker.io/whistteam/docker-maven-test</repository>
 		                 <tag>${project.version}</tag>
 		             </configuration>
 			</plugin>
