--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,12 @@ dist: trusty
 before deploy:
 - gcloud config set project whist-game-production
 - gcloud auth activate-service-account --key-file ${HOME}/build/israeli-whist-dev/israeli-whist-server/whist-game-production-847885794860.json
-- gcloud docker -- push gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT
+- gcloud docker -- push gcr.io/whist-game-production/docker-maven-test:$TRAVIS_COMMIT
 
 deploy: 
   skip_cleanup: true
   provider: script
   script:
   - gcloud container clusters get-credentials whist-game-cluster-production --zone us-central1-c 
-  - kubectl set image deployment/whist-server whist-server=gcr.io/whist-game-production/docker-maven-test:0.0.1-SNAPSHOT
+  - kubectl set image deployment/whist-server whist-server=gcr.io/whist-game-production/docker-maven-test:latest
     
