--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 		             </executions>
 		             <configuration>
 		             <repository>docker.io/whistteam/docker-maven-test</repository>
-		                 <tag>${project.version}</tag>
+		                 <tag>${git-revision}</tag>
 		             </configuration>
 			</plugin>
 		</plugins>
