--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,10 +11,11 @@ steps:
     
     - name: maven
       entrypoint: mvn
-      args: ./mvnw install
-    
+      args: ['install']
+        
     - name: "gcr.io/cloud-builders/docker"
       args: ["push", "gcr.io/whist-game-production/whist-server:$REVISION_ID"]
+      
     - name: "gcr.io/cloud-builders/kubectl"
       args:
         - "set"
