--- a/Whist/Server/cloudbuild.yaml
+++ b/Whist/Server/cloudbuild.yaml
@@ -26,4 +26,4 @@ steps:
         - "CLOUDSDK_COMPUTE_ZONE=us-central1-c"
         - "CLOUDSDK_CONTAINER_CLUSTER=whist-game-cluster-production"
 
-#comment
+#commen
