--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,3 +25,5 @@ steps:
       env:
         - "CLOUDSDK_COMPUTE_ZONE=us-central1-c"
         - "CLOUDSDK_CONTAINER_CLUSTER=whist-game-cluster-development"
+
+asas
