--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,3 +26,4 @@ steps:
         - "CLOUDSDK_COMPUTE_ZONE=us-central1-c"
         - "CLOUDSDK_CONTAINER_CLUSTER=whist-game-cluster-development"
 
+asa 
